<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_paqueteria"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lenovo.albatros.Paqueteria"
    android:background="@color/background_layout">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/albatrosexpress"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text='"Transportamos tus paquetes como si tú mismo los transportaras" '
        android:textColor="@color/text_color"/>
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mapa_paqueteria"/>
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Paqueteria1"
            android:textColor="@color/text_color"/>

    </LinearLayout>
            <LinearLayout
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/paqueteria1"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paqueteria2"
                    android:textColor="@color/text_color"/>

            </LinearLayout>
            <LinearLayout
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/paqueteria2"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paqueteria3"
                    android:textColor="@color/text_color"/>

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="PAQUETERIA HERMOSILLO"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="25dp"/>
            <LinearLayout
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="vertical"
                android:background="@drawable/background_with_shadow"
                >

                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Boulevard Luis Encinas No. 390 local 2"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Col. El Coloso CP 83040"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Junto a la Central de Autobuses Albatros"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Tels.: (662) 217-3104, (662) 197-4650, 01 (800) 624-6618"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_gravity="center"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HORARIO:"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Lunes a viernes de 7:00 a 20:30 - Sábado de 7:00 a 17:30"
                    android:textColor="@color/text_color"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="SANTA ANA"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="25dp"/>
            <LinearLayout
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="vertical"
                android:background="@drawable/background_with_shadow"
                >

                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Avenida Serna y Anaya No. 301 Norte"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Col La Terracita, C.P. 84600"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Tel. (641) 324-3200"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text=""
                    android:textColor="@color/text_color"/>

                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HORARIO:"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Lunes a domingo de 6:00 A 22:00"
                    android:textColor="@color/text_color"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="CABORCA"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="25dp"/>
            <LinearLayout
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="vertical"
                android:background="@drawable/background_with_shadow"
                >

                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Av. Quiroz y Mora No. 179 Norte"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Col. Centro, CP 83600"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Frente al VIP VIP"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Tel. 372-2500"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text=""
                    android:textColor="@color/text_color"/>

                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HORARIO:"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Lunes a viernes de 7:00 a 22:00 - Sábado de 7:00 a 20:00 "
                    android:textColor="@color/text_color"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="PUERTO PEÑASCO"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="25dp"/>
            <LinearLayout
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="vertical"
                android:background="@drawable/background_with_shadow"
                >

                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lázaro Cárdenas entre Altamiranos y Niños Héroes esq."
                    android:layout_gravity="center"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Col. Centro, C.P. 83550"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Tel. (638) 383-2019"
                    android:textColor="@color/text_color"/>

                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text=""
                    android:textColor="@color/text_color"/>

                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HORARIO:"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Lunes a sábado de 7:00 a 20:30 "
                    android:textColor="@color/text_color"/>
            </LinearLayout>
            </LinearLayout>
    </ScrollView>
</LinearLayout>
